# textbook-code

./: .gitignore  .gitmodules  LICENSE  LICENSE.md  README.md
ProblemGenerators/: ArrayDimensionProblem.js  AssemblyProblems.js  CodeStructures.js  Common.js  DataStructures.js  FloatProblems.js  IntegerProblem.js  RadixConversion.js  chapter02problems.html  chapter03problems.html  chapter04problems.html  chapter05problems.html  chapter06problems.html
chap01/: dont_use_break.c  enum_examples.c  enum_examples.h  examine_bits.c  hello.h  hello1.c  hello2.c  hello3.c  hello4.c  never_zero.c  pre_post_increment.c  struct_examples.c  switch_example.c
chap02/: EndianTest.java  endian_test.c  watermark_demo.c
chap03/: casting.c  iterate_over_alphabet.c  show_limits.c
chap04/: casting.c  nonterminating_loop.c  show_limits.c  terminating_loop.c
chap05/: arithmetic.c  lecture-examples.c  lecture-examples.s  mov.c
chap06/: 2darray.c  arrays.c  indirect_result.c  lecture-examples.c  memory_layout.c  struct_alignment.c  structured_programming.c
chap07/: accidental_overflow.c  attack-string  degrees_of_parallelizable.c  dining_philosophers.c  has-target.c  memory_layout.c  notional_gets.c  perverse_interleaving.c  thread_demo.c
chap07/lecture-examples/: injection-code.hex
chap08/: CMakeLists.txt  atomic_interleaving.c  degrees_of_parallelizable.c  dining_philosophers.c  fork_demo.c  lecture-examples.c  perverse_interleaving.c  thread_demo.c
chap08/additional-lecture-examples/: orphan.c
chap08/gists/: mergesort-driver.c  print-arrays.h
chap08/textbook-gists/: dining-philosophers-driver.c  interleavings-driver.c  menu.c  menu.h  print-arrays.c  processes-driver.c  pthreads-driver.c  vector-maximum-driver.c
chap09/: CMakeLists.txt  catchall.c  segfaultmaker.c  signal_handler_demo.c
chap09/lecture-examples/: syscall_demo.c  syscall_demo.s-original  syscall_demo.s-syscalls
chap09/lecture-examples/Arduino/error-corrected-timer-blink/: error-corrected-timer-blink.ino
chap09/lecture-examples/Arduino/mmap-demo/: mmap-demo.ino
chap09/lecture-examples/Arduino/narcoleptic-blink/: narcoleptic-blink.ino
chap09/lecture-examples/Arduino/one-second-interrupt/: cowpi.h  one-second-interrupt.ino
chap09/lecture-examples/Arduino/spring2022/mmap-demo/: mmap-demo.ino
chap09/lecture-examples/Arduino/spring2022/one-second-interrupt/: one-second-interrupt.ino
chap09/lecture-examples/Arduino/spring2022/timer-blink/: timer-blink.ino
chap09/lecture-examples/Arduino/timer-blink/: cowpi.h  timer-blink.ino
chap09/lecture-examples/Arduino/timer-blink-interrupt/: timer-blink-interrupt.ino
chap09/lecture-examples/CowPi-mk4b/livecoding-solutions/io-demo/src/: interrupt-io.c  interrupt-io.h  main.cpp  mmap-io.c
chap09/lecture-examples/CowPi-mk4b/livecoding-template/io-demo/: diagram.json  platformio.ini  wokwi.toml
chap09/lecture-examples/CowPi-mk4b/livecoding-template/io-demo/src/: interrupt-io.c  main.cpp  mmap-io.c  mmap-io.h
chap09/textbook-gists/: signal-handler-driver.c
chap10/: loopIndexing.c  print_addresses.c
chap11/: accidental_overflow.c  buffer-too-small.c  hex2raw.c  rop-string  rop-victim.c
chap11/lecture-examples/: injection-code.s  rop-attack.hex  target.c  two-buffer.hex
chap12/: alias_and_unrolling.c  code_migration.c  inlining.c
chap13/: code_migration.c
